# secretary-core

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  export_examples_secrets.example.yml  policy.example.md  pyproject.toml
.github/workflows/: ci.yml
architecture/: index.html  m1-extraction.mmd  m2-transformation.mmd  m3-dispatch.mmd  system.mmd
cli/: README.md
docs/: empezar-desde-cero.md  getting-started.md
mail/: policy.example.md  settings.example.md
playbooks.example/: _firma.md
playbooks.example/dispatch-executor/: SKILL.md
playbooks.example/drive-crawler/: SKILL.md
playbooks.example/housekeeping/: SKILL.md
playbooks.example/job-search-crawler/: SKILL.md
playbooks.example/reuniones-update/: SKILL.md
playbooks.example/revision-correo/: SKILL.md
playbooks.example/sec-dream/: SKILL.md
playbooks.example/sec-heartbeat/: SKILL.md  run.sh
playbooks.example/secretary-briefing/: SKILL.md
playbooks.example/tidy-up/: SKILL.md
playbooks.example/whatsapp-monitor/: SKILL.md
playbooks.example/wiki-update/: SKILL.md
routines/: README.md  drive-crawler.md  mail-review.md  meetings-processor.md  whatsapp-monitor.md  wiki-sync.md
secd/: README.md  package.json  server.mjs
secd/lib/: capture.mjs  (+8 more)
secretary/: __init__.py  __main__.py  acc.py  build_root.py  config.py  dream.py  export_examples.py  fresh.py  main.py  modules.py  portal.py  recall.py  routines_setup.py  status.py  tui.py  validate.py
whatsapp/: policy.example.md
wiki/: README.md  articulos  deploy-output.sh  enrich_report.py  serve.py  sync-comments.py
(+76 files in other folders)
