[project]
name = "secretary"
version = "0.1.0"
description = "CLI for the secretary personal-assistant engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
secretary = "secretary.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["secretary"]
